Remove ysoserial verification instructions
Removed verification steps for ysoserial usage from README.